# severance

./: .dockerignore  .gitignore  Dockerfile  LICENSE  PLAN.md  README.md  config.example.yaml  pyproject.toml  severance.db
severance/: __init__.py  __main__.py  auth.py  config.py  db.py  scheduler.py  server.py
severance/pricing/: __init__.py  models.json
severance/providers/: __init__.py  anthropic_provider.py  base.py  openai_provider.py
static/: app.js  index.html  style.css
